<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_lock"
        android:title="@string/Lock"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_lock_lock"
        android:orderInCategory="200"
        />
    <item
        android:title="@string/Edit"
        android:id="@+id/action_edit"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        />
    <item
        android:id="@+id/action_save_to_txt"
        android:title="@string/save_to_text"
        android:orderInCategory="400"
        app:showAsAction="never"
        />
    <item
        android:title="Info"
        android:id="@+id/action_info"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="500"
        />
    <item
        android:title="@string/share"
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="600"
        app:showAsAction="ifRoom"
        android:actionProviderClass=
            "android.widget.ShareActionProvider" />
        />
</menu>